--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>This is my blog page</title>
+        <title>fkoca.io</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description", content="This is a blog site">
@@ -9,10 +9,27 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body id="site-background">
-        <div class="header_image">
-            <h1 class="site_title">Başlık</h1>
-            <p class="site_desc">Yazılım hakkında yazıp çizdiklerim...</p>
-        </div>
+        <header>
+            <div class="header_image">
+                <h1 class="site_title">fkoca.io</h1>
+                <p class="site_desc">Merhaba! Bu kişisel blog sitesi ile öğrendiklerimi kendi bakış açımla paylaşıyorum..</p>
+                <nav class="navbar">
+                    <div class="logo">
+                    <h1>Ferdi KOCA</h1>
+                    </div>
+        
+                    <ul class="menu">
+                    <li class="menuItem"><a href="#">Yazılar</a></li>
+                    <li class="menuItem"><a href="#">CV</a></li>
+                    <li class="menuItem"><a href="#">Arşiv</a></li>
+                    <li class="menuItem"><a href="#">Arama</a></li>
+                    <li class="menuItem"><a href="#">İletişim</a></li>
+                    <li class="menuItem"><a href="#">Patreon</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        
         <!-- <a href="https://www.google.com/" title="Google'a gider." target="_blank">Google</a>
         <a href="blogpost1.html" target="_blank">Post 1</a>
         <h1>header 1</h1> -->
