--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body id="site-background">
         <div class="header_image">
@@ -62,6 +63,39 @@
                 </a>
             </div>
         </section>
+
+		<footer class="footer-style">
+
+			<div class="footer-left">
+
+				<p class="footer-bloggername">Ferdi KOCA © 2023</p>
+
+				<div class="footer-icons">
+
+					<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.linkedin.com/in/f-koca/" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="https://github.com/ferdi12-tr" target="_blank"><i class="fa fa-github"></i></a>
+
+				</div>
+
+			</div>
+
+			<div class="footer-right">
+
+				<p>Yorum yaz:</p>
+
+				<form action="#" method="post">
+
+					<input type="text" name="email" placeholder="Email">
+					<textarea name="message" placeholder="Yorumların.."></textarea>
+					<button>Gönder</button>
+
+				</form>
+
+			</div>
+
+		</footer>
     </body>
 </html>
 
