--- a/main.html
+++ b/main.html
@@ -63,38 +63,36 @@
                 </a>
             </div>
         </section>
-
+        <section>
+            <div class="pagination">
+                <a href="#">&laquo;</a>
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">6</a>
+                <a href="#">&raquo;</a>
+            </div>
+        </section>
 		<footer class="footer-style">
-
 			<div class="footer-left">
-
 				<p class="footer-bloggername">Ferdi KOCA © 2023</p>
-
 				<div class="footer-icons">
-
 					<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
 					<a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter"></i></a>
 					<a href="https://www.linkedin.com/in/f-koca/" target="_blank"><i class="fa fa-linkedin"></i></a>
 					<a href="https://github.com/ferdi12-tr" target="_blank"><i class="fa fa-github"></i></a>
-
 				</div>
-
 			</div>
-
 			<div class="footer-right">
-
 				<p>Yorum yaz:</p>
-
 				<form action="#" method="post">
-
 					<input type="text" name="email" placeholder="Email">
 					<textarea name="message" placeholder="Yorumların.."></textarea>
 					<button>Gönder</button>
-
 				</form>
-
 			</div>
-
 		</footer>
     </body>
 </html>
