--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                 <h1>Ferdi KOCA</h1>
                 </div>
                 <ul class="menu">
-                    <li class="menuItem"><a href="#">CV</a></li>
+                    <li class="menuItem"><a href="cv.html">CV</a></li>
                     <li class="menuItem"><a href="#">Yazılar</a></li>
                     <li class="menuItem"><a href="#">Arşiv</a></li>
                     <li class="menuItem"><a href="#">Arama</a></li>
