fill the blog pages

--- a/pages/nlp.html
+++ b/pages/nlp.html
@@ -7,6 +7,7 @@
         <meta name="description", content="This is a blog site">
         <meta name="author", content="Ferdi Koca">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/pages.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -29,6 +30,60 @@
                 </ul>
             </nav>
         </div>
+        <section>
+            <article class="pages">
+                <h2>Doğal Dil İşleme (Natural Language Processing) Nedir?</h2>
+                <p>
+                    Merhaba değerli okurlar! Bugün sizlere ilgi çekici bir konudan bahsedeceğim: Doğal Dil İşleme veya kısaca NLP. Teknolojinin gelişmesiyle birlikte, makinelerin insanlar gibi dil anlama ve üretme yeteneklerini kazanması, işte tam da bu alana ait. Gelin, Doğal Dil İşleme'nin ne olduğunu ve neden bu kadar heyecan verici bir konu olduğunu birlikte keşfedelim.
+                </p>
+                <span>
+                    <h3>
+                        Doğal Dil İşleme Nedir?
+                    </h3>
+                </span>
+                <p>
+                    Doğal Dil İşleme (NLP), bilgisayar bilimleri ve yapay zeka alanlarında yer alan bir alt dal olarak karşımıza çıkar. Temel amacı, insan dilini (doğal dil) anlama, yorumlama, üretme ve işleme yeteneklerini bilgisayarlar aracılığıyla gerçekleştirmektir. Bu, makinelere metinleri anlama, konuşma sentezleme, dil tabanlı veri analizi gibi insanlar arasındaki iletişimi anlamalarını sağlayan yetenekleri kazandırır.
+                </p>
+                <span>
+                    <h3>
+                        Neden Doğal Dil İşleme Önemlidir?
+                    </h3>
+                </span>
+                <p>
+                    <ul>
+                        Doğal Dil İşleme, birçok alanda büyük bir potansiyele sahiptir:
+                        <li><h4>İletişim Kolaylığı:</h4></li> Bilgisayarlar ve insanlar arasında daha doğal ve etkili iletişim sağlar. Sesli asistanlar ve metin tabanlı sohbet robotları gibi uygulamalar sayesinde, kullanıcılar cihazlarıyla konuşabilir veya yazabilir.
+                        <li><h4> Büyük Veri Analizi:</h4></li> İnternet ve dijital platformlar üzerindeki veri miktarı her geçen gün artıyor. NLP, bu verileri anlama, sınıflandırma ve özetleme yetenekleriyle işlemeyi kolaylaştırır.
+                        <li><h4>Hislerin Analizi:</h4></li> Metinlerdeki dil kullanımı ve ifadeler, duygusal durumları yansıtabilir. NLP, sosyal medya analizi gibi alanlarda insanların duygusal tepkilerini ve eğilimlerini anlamada yardımcı olabilir.
+                        <li><h4>Çeviri Hizmetleri:</h4></li> NLP, metinleri otomatik olarak farklı dillere çevirmekte kullanılır. Bu, küresel iletişimi kolaylaştırır.
+                
+                    </ul>
+                </p>
+                <span>
+                    <h3>
+                        Doğal Dil İşleme Nasıl Çalışır?
+                    </h3>
+                </span>
+                <p>
+                    <ul>
+                        NLP, temelde şu adımları içeren bir süreç izler:
+                        <li><h4>Veri Toplama:</h4></li> İşlem yapılacak metin verileri toplanır. Bu makaleler, kitaplar, sosyal medya gönderileri veya herhangi bir metin kaynağı olabilir.
+                        <li><h4>Önişleme:</h4></li> Veriler temizlenir, gereksiz semboller çıkarılır, cümleler parçalara ayrılır ve kelimeler morfolojik yapılarına göre ayrıştırılır.
+                        <li><h4>Anlama ve İşleme:</h4></li> Metin içeriği semantik olarak anlaşılır. Kelimelerin anlamları, ilişkileri ve cümleler arasındaki bağlam analiz edilir.
+                        <li><h4>Çıkarım ve Sonuç:</h4></li> İşlenmiş metin verilerinden anlamlı sonuçlar çıkarılır. Bu, duygusal analiz, özetleme, sınıflandırma gibi işlemleri içerebilir.
+                
+                    </ul>
+                </p>
+                <span>
+                    <h3>
+                        Sonuç
+                    </h3>
+                </span>
+                <p>
+                    Doğal Dil İşleme, teknolojinin insanlarla daha etkili ve anlamlı bir şekilde iletişim kurmasına yardımcı olan heyecan verici bir alandır. Gelişen algoritmalar ve artan veri miktarıyla birlikte, NLP'nin potansiyelinin henüz sadece bir kısmını gördük. Gelecekte, daha akıllı ve insan benzeri dil yeteneklerine sahip makinelerle karşılaşmak çok muhtemel görünüyor. Umarım bu yazı, Doğal Dil İşleme hakkında temel bir anlayış kazanmanıza yardımcı olmuştur. Teknolojinin bu harika yönü hakkında daha fazla keşif yapmaya devam etmek için sabırsızlanıyorsanız, takipte kalın!
+                </p>
+            </article>
+        </section>
     </body>
 </html>
 
