--- a/pages/transformer.html
+++ b/pages/transformer.html
@@ -7,6 +7,7 @@
         <meta name="description", content="This is a blog site">
         <meta name="author", content="Ferdi Koca">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/pages.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -29,6 +30,62 @@
                 </ul>
             </nav>
         </div>
+        <section>
+            <article class="pages">
+                <h2>Transformer Mimarisi: Dil İşleme ve Yapay Zeka İçin Devrim Niteliğinde Bir Adım</h2>
+                <p>
+                    Merhaba sevgili okurlar! Bu yazıda, son yılların en büyük yapay zeka başarılarından biri olarak kabul edilen "Transformer" mimarisine derinlemesine bir bakış atmaya hazır olun. Transformer, doğal dil işleme, metin oluşturma, çeviri ve daha pek çok yapay zeka görevinde çığır açan bir teknoloji olarak öne çıkmıştır. İşte bu etkileyici mimarinin nasıl çalıştığına dair bir rehber:
+                <span>
+                    <h3>
+                        Temel İdea: Dikkat Mekanizması
+                    </h3>
+                </span>
+                </p>
+                <p>
+                    Transformer'ın temeli, "dikkat" mekanizması olarak bilinen bir kavram etrafında şekillenir. Bu mekanizma, bir girdi dizisindeki farklı öğelerin birbirleriyle olan ilişkilerini anlamayı amaçlar. Geleneksel dil işleme modelleri, önceki ve sonraki kelime bağlamını anlamada zorluk yaşayabilir. Ancak, dikkat mekanizması sayesinde Transformer, tüm kelime ilişkilerini çıkarabilir ve bu da dil işleme görevlerini büyük ölçüde iyileştirir.
+                </p>
+                <span>
+                    <h3>
+                        Encoder ve Decoder Yapısı
+                    </h3>
+                </span>
+                <p>
+                    Transformer mimarisi, temelde bir "encoder" (kodlayıcı) ve bir "decoder" (çözücü) yapısından oluşur. Encoder, girdi metni boyunca dikkat mekanizmasını kullanarak özellik vektörlerini üretir. Bu vektörler, her bir girdi öğesinin temsilini içerir. Decoder ise, verilen özellik vektörlerini kullanarak çıktı metinini üretir.
+                </p>
+                <span>
+                    <h3>
+                        Dikkat Başlıkları ve Çoklu Dikkat
+                    </h3>
+                </span>
+                <p>
+                    Transformer, dikkat mekanizmasını "başlıklar" halinde uygular. Her bir dikkat başlığı, farklı ilişki türlerini vurgulamak için eğitilir. Bu sayede, model aynı anda farklı dil yapılarına ve özelliklere odaklanabilir. Ayrıca, "çoklu dikkat" kullanarak farklı pozisyonlardaki ilişkileri yakalama yeteneği kazanır.
+                </p>
+                <span>
+                    <h3>
+                        Öğrenme Süreci: Öğrenme Oranı ve Masked Language Model
+                    </h3>
+                </span>
+                <p>
+                    Transformer'ın öğrenme süreci, "maskeleme dil modeli" (masked language model) olarak da bilinen ilginç bir özellik içerir. Eğitim sırasında, model rastgele seçilen kelimeleri gizler ve ardışık kelimeleri tahmin etme yeteneği kazandırılır. Bu, öğrenme sırasında kelime bağlamını anlama konusunda modelin daha sağlam bir temel oluşturmasını sağlar.
+                </p>
+                <span>
+                    <h3>
+                        Transfer Öğrenme ve İleri Uygulamalar
+                    </h3>
+                </span>
+                <p>
+                    Transformer'ın büyük bir avantajı, transfer öğrenme yeteneğidir. Büyük metin veri setlerinde önceden eğitildikten sonra, öğrenilen temsiller farklı görevlerde kullanılabilir. Örneğin, metin çeviriden duygu analizine kadar geniş bir yelpazede uygulamalar mümkündür.
+                </p>
+                <span>
+                    <h3>
+                        Sonuç
+                    </h3>
+                </span>
+                <p>
+                    Transformer mimarisi, dil işleme ve yapay zeka alanında devrim niteliğinde bir adım olmuştur. Dikkat mekanizması, çoklu dikkat, öğrenme süreci ve transfer öğrenme gibi kavramlar, dil işleme görevlerini daha hassas ve etkili hale getirmekte kullanılır. Bu mimari, çağımızın en ileri yapay zeka sistemlerinin temelini oluşturuyor ve gelecekteki gelişmeler için heyecan verici bir temel sunuyor. Umarım bu yazı, Transformer mimarisini anlamanıza yardımcı olmuştur. Gelecekteki yazılarda görüşmek üzere!
+                </p>
+            </article>
+        </section>
     </body>
 </html>
 
