added comment area to each page

--- a/pages/nlp.html
+++ b/pages/nlp.html
@@ -7,6 +7,7 @@
         <meta name="description", content="This is a blog site">
         <meta name="author", content="Ferdi Koca">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/comment.css">
         <link rel="stylesheet" href="../css/pages.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,6 +84,17 @@
                     Doğal Dil İşleme, teknolojinin insanlarla daha etkili ve anlamlı bir şekilde iletişim kurmasına yardımcı olan heyecan verici bir alandır. Gelişen algoritmalar ve artan veri miktarıyla birlikte, NLP'nin potansiyelinin henüz sadece bir kısmını gördük. Gelecekte, daha akıllı ve insan benzeri dil yeteneklerine sahip makinelerle karşılaşmak çok muhtemel görünüyor. Umarım bu yazı, Doğal Dil İşleme hakkında temel bir anlayış kazanmanıza yardımcı olmuştur. Teknolojinin bu harika yönü hakkında daha fazla keşif yapmaya devam etmek için sabırsızlanıyorsanız, takipte kalın!
                 </p>
             </article>
+        </section>
+        <section>
+            <div class="comment-style">
+                <div class="comment-right">
+                    <form action="#" method="post">
+                        <input type="text" name="email" placeholder="Email">
+                        <textarea name="message" placeholder="Düşüncelerini paylaş.."></textarea>
+                        <button>Gönder</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </body>
 </html>
