--- a/pages/sql.html
+++ b/pages/sql.html
@@ -8,6 +8,7 @@
         <meta name="author", content="Ferdi Koca">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/pages.css">
+        <link rel="stylesheet" href="../css/comment.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -96,6 +97,17 @@
                     SQL, veritabanı yönetiminin temel taşıdır ve verilerin etkili bir şekilde yönetilmesini sağlar. Temel mantığı, veritabanı oluşturma, tablo oluşturma, veri ekleme, sorgulama ve veri güncelleme/silme adımlarından oluşur. SQL sorguları, belirli bir sıraya göre çalışarak istenilen sonuçları üretir. Bu yazı sayesinde SQL'in temel mantığını anlamış olduk. Umarım bu yazı, SQL hakkında temel bir kavrayış kazanmanıza yardımcı olmuştur. Daha fazla detay ve uygulama örnekleri ile SQL'i daha derinlemesine keşfedebilirsiniz.
                 </p>
             </article>
+        </section>
+        <section>
+            <div class="comment-style">
+                <div class="comment-right">
+                    <form action="#" method="post">
+                        <input type="text" name="email" placeholder="Email">
+                        <textarea name="message" placeholder="Düşüncelerini paylaş.."></textarea>
+                        <button>Gönder</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </body>
 </html>
