--- a/pages/transformer.html
+++ b/pages/transformer.html
@@ -8,6 +8,7 @@
         <meta name="author", content="Ferdi Koca">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/pages.css">
+        <link rel="stylesheet" href="../css/comment.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -85,6 +86,17 @@
                     Transformer mimarisi, dil işleme ve yapay zeka alanında devrim niteliğinde bir adım olmuştur. Dikkat mekanizması, çoklu dikkat, öğrenme süreci ve transfer öğrenme gibi kavramlar, dil işleme görevlerini daha hassas ve etkili hale getirmekte kullanılır. Bu mimari, çağımızın en ileri yapay zeka sistemlerinin temelini oluşturuyor ve gelecekteki gelişmeler için heyecan verici bir temel sunuyor. Umarım bu yazı, Transformer mimarisini anlamanıza yardımcı olmuştur. Gelecekteki yazılarda görüşmek üzere!
                 </p>
             </article>
+        </section>
+        <section>
+            <div class="comment-style">
+                <div class="comment-right">
+                    <form action="#" method="post">
+                        <input type="text" name="email" placeholder="Email">
+                        <textarea name="message" placeholder="Düşüncelerini paylaş.."></textarea>
+                        <button>Gönder</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </body>
 </html>
