--- a/pages/uxuı.html
+++ b/pages/uxuı.html
@@ -8,6 +8,7 @@
         <meta name="author", content="Ferdi Koca">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/pages.css">
+        <link rel="stylesheet" href="../css/comment.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -94,6 +95,17 @@
                     UI ve UX tasarımı, modern teknolojide başarının anahtarıdır. Kullanıcıların ihtiyaçlarını anlamak, basit ve kullanıcı dostu tasarımlar oluşturmak, görsel uyum ve deneyim testleri yapmak, etkili bir UI ve UX oluşturmanın temel adımlarıdır. Unutmayın ki, kullanıcıların memnuniyeti ve sadakati, başarılı bir ürün veya hizmetin temelini oluşturur. Umarım bu yazı, UI ve UX tasarımının önemi konusundaki anlayışınızı artırmıştır. Bir sonraki yazıda görüşmek üzere!
                 </p>
             </article>
+        </section>
+        <section>
+            <div class="comment-style">
+                <div class="comment-right">
+                    <form action="#" method="post">
+                        <input type="text" name="email" placeholder="Email">
+                        <textarea name="message" placeholder="Düşüncelerini paylaş.."></textarea>
+                        <button>Gönder</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </body>
 </html>
