--- a/pages/transformer.html
+++ b/pages/transformer.html
@@ -22,12 +22,9 @@
                 <h1>Ferdi KOCA</h1>
                 </div>
                 <ul class="menu">
-                    <li class="menuItem"><a href="#">CV</a></li>
-                    <li class="menuItem"><a href="#">Yazılar</a></li>
-                    <li class="menuItem"><a href="#">Arşiv</a></li>
-                    <li class="menuItem"><a href="#">Arama</a></li>
-                    <li class="menuItem"><a href="#">İletişim</a></li>
-                    <li class="menuItem"><a href="#">Patreon</a></li>
+                    <li class="menuItem"><a href="../main.html">Anasayfa</a></li>
+                    <li class="menuItem"><a href="../cv.html">CV</a></li>
+                    <li class="menuItem"><a href="#footer-section">İletişim</a></li>
                 </ul>
             </nav>
         </div>
