add iletisim page

--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>fkoca.io</title>
+        <title>fkoca.io - Main</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description", content="This is a blog site">
@@ -24,7 +24,7 @@
                 <ul class="menu">
                     <li class="menuItem"><a href="#">Anasayfa</a></li>
                     <li class="menuItem"><a href="cv.html">CV</a></li>
-                    <li class="menuItem"><a href="#footer-section">İletişim</a></li>
+                    <li class="menuItem"><a href="iletisim.html">İletişim</a></li>
                 </ul>
             </nav>
         </div>
