--- a/pages/cnn.html
+++ b/pages/cnn.html
@@ -24,7 +24,7 @@
                 <ul class="menu">
                     <li class="menuItem"><a href="../main.html">Anasayfa</a></li>
                     <li class="menuItem"><a href="../cv.html">CV</a></li>
-                    <li class="menuItem"><a href="#footer-section">İletişim</a></li>
+                    <li class="menuItem"><a href="../iletisim.html">İletişim</a></li>
                 </ul>
             </nav>
         </div>
