add commend to sections

--- a/iletisim.html
+++ b/iletisim.html
@@ -13,20 +13,26 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
     <body id="site-background">
-        <div class="header_image">
-            <h1 class="site_title">fkoca.io</h1>
-            <p class="site_desc">Merhaba! Bu kişisel blog sitesi ile öğrendiklerimi kendi bakış açımla paylaşıyorum..</p>
-            <nav class="navbar">
-                <div class="logo">
-                <h1>Ferdi KOCA</h1>
-                </div>
-                <ul class="menu">
-                    <li class="menuItem"><a href="main.html">Anasayfa</a></li>
-                    <li class="menuItem"><a href="cv.html">CV</a></li>
-                    <li class="menuItem"><a href="#">İletişim</a></li>
-                </ul>
-            </nav>
-        </div>
+
+        <!-- Navbar and site header background image section -->
+        <section>
+            <div class="header-image">
+                <h1 class="site-title">fkoca.io</h1>
+                <p class="site-desc">Merhaba! Bu kişisel blog sitesi ile öğrendiklerimi kendi bakış açımla paylaşıyorum..</p>
+                <nav class="navbar">
+                    <div class="logo">
+                    <h1>Ferdi KOCA</h1>
+                    </div>
+                    <ul class="menu">
+                        <li class="menuItem"><a href="main.html">Anasayfa</a></li>
+                        <li class="menuItem"><a href="cv.html">CV</a></li>
+                        <li class="menuItem"><a href="#">İletişim</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+
+        <!-- Content section -->
         <section>
             <article class="pages">
                 <h2>Neden Bu Blog Sayfası Var?</h2>
